--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
       <div class="line"></div>
       <div class="smoothies">
         <div class="smoothie1">
-          <img src="./smoothie1.jpg" />
+          <img src="./jpg/smoothie1.jpg" />
           <h3>Red heaven</h3>
           <p>
             <b>Ingredients:</b>strawberries, raspberries, nonlactose milk, mint
           </p>
         </div>
         <div class="smoothie2">
-          <img src="./smoothie2.jpg" />
+          <img src="./jpg/smoothie2.jpg" />
           <h3>Berry Mix</h3>
           <p>
             <b>Ingredients:</b> raspberries, blueberries, cranberries,
@@ -60,12 +60,12 @@
           </p>
         </div>
         <div class="smoothie3">
-          <img src="./smoothie3.jpg" />
+          <img src="./jpg/smoothie3.jpg" />
           <h3>Chocolate cheatday</h3>
           <p><b>Ingredients:</b> chocolate, nonlactose milk, banana</p>
         </div>
         <div class="smoothie4">
-          <img src="./smoothie4.jpeg" />
+          <img src="./jpg/smoothie4.jpeg" />
           <h3>Green Alliance</h3>
           <p><b>Ingredients:</b> green apple, avocado, lemon, lettuce, water</p>
         </div>
@@ -80,7 +80,7 @@
           big amount of vitamins and nutrients they can be helpful in heart
           diseses and strenghten immunity
         </p>
-        <img src="./wykres.jpg" class="vitamin-chart" />
+        <img src="./jpg/chart.jpg" class="vitamin-chart" />
       </div>
     </div>
     <div class="about-us">
@@ -90,7 +90,7 @@
         We are in Poland since 1989 delivering best smoothies in many cities
       </p>
       <div class="person">
-        <img src="./arnold.jpg" />
+        <img src="./jpg/arnold.jpg" />
         <p>
           "Smoothies help my muscles to rebuild after a hard training."
         </p>
@@ -99,7 +99,7 @@
         <p>
           "Smoothies are great a idea to have a small and fit meal"
         </p>
-        <img src="./margot.jpg" />
+        <img src="./jpg/margot.jpg" />
       </div>
     </div>
     <footer>
